# meeting-summarization

./: .env  .gitignore  CONDA_SETUP.md  DEPLOYMENT_GUIDE.md  FEATURES_COMPLETED.md  NEW_WORKFLOW_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  alembic.ini
agent/: README.md  cspell.json  main.py  pyproject.toml
agent/migrations/versions/: 3d80fbd44f2f_add_is_active_to_organization_model.py  89c27290e867_admin_login.py  91d63f70fdd5_initilize_tables.py  dc209b933385_add_client_id_to_chat_session.py
agent/src/ai_agent/api/: router.py
agent/src/ai_agent/api/admin/: organizations.py  router.py
agent/src/ai_agent/api/dependencies/: repository_dependencies.py  security_dependencies.py  token_manager_dependencies.py
agent/src/ai_agent/api/helpers/: file_helper.py
agent/src/ai_agent/api/schemas/: app_clients.py  auth.py  categories.py  chat.py  collections.py  documents.py  download.py  organizations.py  sync.py
agent/src/ai_agent/api/v1/: __init__.py  chat_sessions.py  collections.py  external_users.py  router.py  sync.py
agent/src/ai_agent/application/graph/: builder.py  state.py
agent/src/ai_agent/application/services/: embedding_query_service.py
agent/src/ai_agent/config/: __init__.py  config_past.py
agent/src/ai_agent/domain/dtos/: chat_session_dto.py  collection_dto.py  document_dto.py  download_dto.py  embedding_dto.py  history_message_dto.py  sync_dto.py
agent/src/ai_agent/domain/exceptions/: __init__.py  document_exceptions.py  external_user_exceptions.py  organization_exceptions.py
agent/src/ai_agent/domain/services/: __init__.py
agent/src/ai_agent/domain/value_objects/: chat_message.py  client_scope.py
agent/src/ai_agent/infrastructure/document_embedder/: base.py  (+2 more)
agent/src/ai_agent/utilities/: file_utils.py  url_utils.py
agent/tests/graph/chains/: test_generate_chitchat.py  test_summarize.py
agent/tests/graph/utils/: test_message_utils.py
backend/: PERSISTENT_STORAGE_INFO.md  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  setup_conda.bat  setup_conda.sh  test_api_upload.py  test_file_upload.py  test_persistent_storage.py  test_real_audio.py  test_simple_audio.py  test_startup.py  test_transcription_api.py
backend/src/meeting_summary/: __init__.py
backend/src/meeting_summary/api/: __init__.py  router.py
backend/src/meeting_summary/application/: __init__.py
backend/src/meeting_summary/config/: __init__.py  config.py
backend/src/meeting_summary/domain/: __init__.py
backend/src/meeting_summary/infrastructure/: __init__.py
(+225 files in other folders)
